@@ -34,15 +34,17 @@ function clearAutoRefreshTitle() {
 
 <dtml-if "SaveDrafts() and UseAutoSave()">
   
+var previous_clairvoyant_note='';
 function clairvoyant_followups() {
    $.get(_base_url+'/getRecentOtherDraftThreadAuthor?nochache='+(Math.random()+"").substr(2, 5),
          {'only_fromname':1}, function(resp) {
       try {
-      if (resp) {
+      if (resp && resp != previous_clairvoyant_note) {
          $('#recent-draftthread-author').text(resp).show();
+         previous_clairvoyant_note = resp;
          setTimeout(function() {
             $('#recent-draftthread-author').fadeOut(500);
-         }, 30*1000);
+         }, 20*1000);
       }
       } catch(ex) {alert(ex);}
    });
